<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailMovieFragment">

    <ImageView
        android:id="@+id/posterImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/movie_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        app:layout_constraintStart_toEndOf="@id/posterImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/releaseDateText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/release_date"
        app:layout_constraintStart_toEndOf="@id/posterImage"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <TextView
        android:id="@+id/genresText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:text="@string/genres"
        app:layout_constraintStart_toEndOf="@id/releaseDateText"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <TextView
        android:id="@+id/voteAverageText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/vote_average_text"
        app:layout_constraintStart_toEndOf="@id/posterImage"
        app:layout_constraintTop_toBottomOf="@id/releaseDateText" />

    <TextView
        android:id="@+id/taglineText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/tagline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/posterImage" />

    <TextView
        android:id="@+id/overviewText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/overview_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taglineText" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewText" />

    <TextView
        android:id="@+id/originalTitleText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/Original_Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overview" />

    <TextView
        android:id="@+id/originalTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/Original_Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/originalTitleText" />

    <TextView
        android:id="@+id/budgetText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/budget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/originalTitle" />

    <TextView
        android:id="@+id/budget"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/budget"
        app:layout_constraintTop_toBottomOf="@id/budgetText"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/revenueText"
        android:text="@string/revenue"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/budget"
        android:layout_height="0dp"/>
    <TextView
        android:id="@+id/revenue"
        android:layout_width="wrap_content"
        android:text="@string/revenue"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/revenueText"
        android:layout_height="0dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>